--- a/src/index.css
+++ b/src/index.css
@@ -300,3 +300,11 @@ a:hover, .underline-link:hover, .brand-link:hover {
 .nav-link, .nav-link.active {
   text-decoration: none !important;
 }
+
+html, body {
+  max-width: 100vw;
+  overflow-x: hidden;
+  box-sizing: border-box;
+}
+}
+}
