--- a/src/index.css
+++ b/src/index.css
@@ -8397,3 +8397,32 @@ html, body { max-width: 100vw; overflow-x: hidden; box-sizing: border-box; }
 }
 }
 }
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
+}
