--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
+html, body, #root {
+  width: 100vw;
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 #root {
   max-width: 1280px;
   margin: 0 auto;
